Fix layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,9 @@
 md-sidenav-container {
 	min-height: 100vh;
-	width: 100vw;
 }
 
 .main-sidenav {
-	max-width: 320px;
+	width: 240px;
 	&.md-sidenav-opened {
 		box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
 	}
@@ -12,8 +11,8 @@ md-sidenav-container {
 	span {
 		img {
 			margin: 20px auto;
-			max-width: 150px;
-			max-height: 60px;
+			width: 180px;
+			height: 60px;
 		}
 	}
 
